--- a/6-compose/backend/package.json
+++ b/6-compose/backend/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "backend",
+  "name": "radi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "Aleksa Miletic",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.3",
-    "morgan": "^1.10.0"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^3.1.0"
   }
 }
