--- a/6-compose/backend/package.json
+++ b/6-compose/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radi",
+  "name": "fav-backend",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "mysql": "^2.18.1",
     "axios": "^1.6.8",
-    "cors": "^2.8.5"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mysql2": "^3.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
